--- a/src/app/item/item-table/item-table.component.html
+++ b/src/app/item/item-table/item-table.component.html
@@ -32,7 +32,7 @@
         </ng-container>
 
         <ng-container matColumnDef="cost">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Cost in SP</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Value in SP</th>
             <td mat-cell *matCellDef="let element">{{element.cost | number}}</td>
         </ng-container>
 
