--- a/src/app/item/item-transaction-modal/item-transaction-modal.component.css
+++ b/src/app/item/item-transaction-modal/item-transaction-modal.component.css
@@ -1,3 +1,8 @@
 ::ng-deep .mat-step-header .mat-step-icon-selected {
     background-color: #4699c7; 
  }
+
+ ::ng-deep .mat-dialog-container .fixed-width {
+    width: 40vw;
+     max-width: 40vw;
+}
