--- a/src/app/item/item-transaction-modal/item-transaction-modal.component.css
+++ b/src/app/item/item-transaction-modal/item-transaction-modal.component.css
@@ -2,7 +2,15 @@
     background-color: #4699c7; 
  }
 
+ ::ng-deep .mat-step-header .mat-step-icon-state-edit {
+   background-color: #4699c7; 
+ }
+
  ::ng-deep .mat-dialog-container .fixed-width {
     width: 40vw;
      max-width: 40vw;
+}
+
+.field {
+   min-width: 35vw;
 }
