--- a/src/app/item/item-transaction-modal/item-transaction-modal.component.html
+++ b/src/app/item/item-transaction-modal/item-transaction-modal.component.html
@@ -93,7 +93,7 @@
                 {{secondFormGroup.get("name")!.value | titlecase}}<br>
                 {{secondFormGroup.get("type")!.value | titlecase}}<br>
                 {{secondFormGroup.get("rarity")!.value | titlecase}}<br>
-                {{secondFormGroup.get("description")!.value | titlecase}}<br>
+                {{secondFormGroup.get("description")!.value}}<br>
                 {{getItemValue()}}
             </div>
             <div>
