--- a/src/app/coin/transaction-modal/transaction-modal.component.css
+++ b/src/app/coin/transaction-modal/transaction-modal.component.css
@@ -31,20 +31,6 @@ display: flex;
 margin: auto;
 }
 
-.textBox {
-display: flex;
-margin: auto;
-width: 80%;
-color: black;
-background-color: white;
-}
-
-.textBoxTitle {
-padding-left: 10%;
-font-size: 12px;
-text-align: left;
-}
-
 .withdraw-label {
 font-size: 30px;
 text-align: center;
@@ -64,3 +50,10 @@ color: #4699c7;
     text-align: center;
 }
 
+.description {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding-left: 20px;
+    padding-right: 20px;
+}
