--- a/src/styles.css
+++ b/src/styles.css
@@ -100,3 +100,17 @@ app-item-container .mat-tab-label{
    background-color:#4699c7;
  }
  
+
+ /* REMOVE ARROWS FROM NUMBER INPUT */
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
