--- a/src/app/shared/confirmation-dialog/confirmation-dialog.component.html
+++ b/src/app/shared/confirmation-dialog/confirmation-dialog.component.html
@@ -1,5 +1,9 @@
 <mat-card class="mat-elevation-z0">
-    <div class="confirm-message">
+    <div class="confirm-title">
+        {{data.title | titlecase}}
+    </div>
+    <br>
+    <div style="white-space: pre-line" class="confirm-message">
         {{data.message | titlecase}}
     </div>
     <span class="br"></span>
