--- a/src/app/item/item-table/item-table.component.css
+++ b/src/app/item/item-table/item-table.component.css
@@ -67,6 +67,10 @@ margin-left: 7px;
     vertical-align: middle
 }
 
+.common {
+    color: rgb(182, 182, 182);
+}
+
 .uncommon {
     color: rgb(56, 219, 6);
 }
