--- a/src/app/item/item-table/item-table.component.html
+++ b/src/app/item/item-table/item-table.component.html
@@ -14,7 +14,7 @@
 
         <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-            <td mat-cell *matCellDef="let element">{{element.name}}</td>
+            <td mat-cell *matCellDef="let element">{{element.name | titlecase}}</td>
         </ng-container>
 
         <ng-container matColumnDef="type">
@@ -33,7 +33,14 @@
 
         <ng-container matColumnDef="cost">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Value in SP</th>
-            <td mat-cell *matCellDef="let element">{{element.cost | number}}</td>
+            <td mat-cell *matCellDef="let element">
+                <div *ngIf="element.cost != null">
+                    {{element.cost | number}}
+                </div>
+                <div *ngIf="element.cost == null">
+                    — —
+                </div>
+            </td>
         </ng-container>
 
         <ng-container matColumnDef="withdraw">
