--- a/src/app/item/item-transaction-modal/item-transaction-modal.component.html
+++ b/src/app/item/item-transaction-modal/item-transaction-modal.component.html
@@ -65,10 +65,31 @@
                     </mat-select>
                 </mat-form-field><br>
 
-                <mat-form-field appearance="fill" class="field">
-                    <mat-label>Item Value (Optional)</mat-label>
-                    <input matInput formControlName="cost" placeholder="Enter Cost Of Item In Silver">
-                </mat-form-field><br>
+                <div *ngIf="data.user == getDM()">
+                    <mat-form-field appearance="fill" class="field">
+                        <mat-label>(optional) Item Value
+                            <span *ngIf="shouldDisplaySuggestedCost()">
+                                -- suggested value: {{getSuggestedCost()}}sp
+                            </span>
+                        </mat-label>
+                        <input matInput 
+                        numeric 
+                        type="number"
+                        formControlName="cost" 
+                        placeholder="Enter Cost Of Item In Silver">
+                    </mat-form-field><br>
+                </div>
+
+                <div *ngIf="isAllowedQuantity()">
+                    <mat-form-field appearance="fill" class="field">
+                        <mat-label>(optional) Item Quantity</mat-label>
+                        <input matInput 
+                        numeric 
+                        type="number"
+                        formControlName="quantity" 
+                        placeholder="Enter Quantity">
+                    </mat-form-field><br>
+                </div>
 
                 <mat-form-field appearance="fill" class="field">
                     <mat-label>Description</mat-label>
