--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -12,8 +12,8 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$bag-of-stuff-primary: mat.define-palette(mat.$indigo-palette);
-$bag-of-stuff-accent: mat.define-palette(mat.$amber-palette, A200, A100, A400);
+$bag-of-stuff-primary: mat.define-palette(mat.$light-blue-palette);
+$bag-of-stuff-accent: mat.define-palette(mat.$deep-orange-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
 $bag-of-stuff-warn: mat.define-palette(mat.$red-palette);
