--- a/src/app/coin/money/money.component.html
+++ b/src/app/coin/money/money.component.html
@@ -1,25 +1,30 @@
 <mat-card class="mat-elevation-z0">
-    <div class="lobsterText">
-        <div class="bigLobsterText">
-            Total Value in Silver &nbsp;&nbsp; 
-            <img src="../../../assets/silver.png" class="bigMoneyIcon">
-            {{ currencyTransaction?.totalValueInSilver | number:'1.2-2'  }}
-            <br><br>
-        </div>
-        <img src="../../../assets/platinum.png" class="moneyIcon">
-        Platinum &nbsp;
-        {{ currencyTransaction?.platinumTotal | number }} &nbsp;&nbsp;
-        <img src="../../../assets/electrum.png" class="moneyIcon">
-        Electrum &nbsp;
-        {{ currencyTransaction?.electrumTotal | number }} &nbsp;&nbsp;
-        <img src="../../../assets/silver.png" class="moneyIcon">
-        Silver &nbsp;
-        {{ currencyTransaction?.silverTotal | number }} &nbsp;&nbsp;
-        <img src="../../../assets/copper.png" class="moneyIcon">
-        Copper &nbsp;
-        {{ currencyTransaction?.copperTotal | number }} &nbsp;&nbsp;
-        <img src="../../../assets/gold.png" class="moneyIcon">
-        Gold &nbsp;
-        {{ currencyTransaction?.goldTotal | number }} &nbsp;&nbsp;
-    </div>
+    <mat-tab-group mat-align-tabs="center">
+        <mat-tab label="Party Coin Bank">
+            <br>
+            <div class="lobsterText">
+                <div class="bigLobsterText">
+                    Total Value in Silver &nbsp;&nbsp;
+                    <img src="../../../assets/silver.png" class="bigMoneyIcon">
+                    {{ currencyTransaction?.totalValueInSilver | number:'1.2-2' }}
+                    <br><br>
+                </div>
+                <img src="../../../assets/platinum.png" class="moneyIcon">
+                Platinum &nbsp;
+                {{ currencyTransaction?.platinumTotal | number }} &nbsp;&nbsp;
+                <img src="../../../assets/electrum.png" class="moneyIcon">
+                Electrum &nbsp;
+                {{ currencyTransaction?.electrumTotal | number }} &nbsp;&nbsp;
+                <img src="../../../assets/silver.png" class="moneyIcon">
+                Silver &nbsp;
+                {{ currencyTransaction?.silverTotal | number }} &nbsp;&nbsp;
+                <img src="../../../assets/copper.png" class="moneyIcon">
+                Copper &nbsp;
+                {{ currencyTransaction?.copperTotal | number }} &nbsp;&nbsp;
+                <img src="../../../assets/gold.png" class="moneyIcon">
+                Gold &nbsp;
+                {{ currencyTransaction?.goldTotal | number }} &nbsp;&nbsp;
+            </div>
+        </mat-tab>
+    </mat-tab-group>
 </mat-card>
