refactored scroll and weapon creation

--- a/src/app/bag-parent/bag-parent.component.css
+++ b/src/app/bag-parent/bag-parent.component.css
@@ -23,7 +23,7 @@
     margin: auto;
     width: 60%;
     background-color: #424242;
-    border: 5px solid #000
+    border: 5px solid #000;
 }
 
 
