--- a/src/app/shared/confirmation-dialog/confirmation-dialog.component.html
+++ b/src/app/shared/confirmation-dialog/confirmation-dialog.component.html
@@ -4,7 +4,7 @@
     </div>
     <br>
     <div style="white-space: pre-line" class="confirm-message">
-        {{data.message | titlecase}}
+        {{data.message}}
     </div>
     <span class="br"></span>
     <div mat-dialog-actions class="center">
