--- a/src/app/coin/money/money.component.css
+++ b/src/app/coin/money/money.component.css
@@ -3,6 +3,13 @@
     margin: auto;
 }
 
+.money-text{
+    margin: auto;
+    text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 20px;
+}
+
 ::ng-deep .mat-ink-bar {
     background-color: var(--primary-color, orangered) !important;
 }
