--- a/src/app/coin/money/money.component.css
+++ b/src/app/coin/money/money.component.css
@@ -6,7 +6,7 @@
 .money-text{
     margin: auto;
     text-align: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: 20px;
 }
 
