--- a/src/app/item/item-transaction-modal/item-transaction-modal.component.html
+++ b/src/app/item/item-transaction-modal/item-transaction-modal.component.html
@@ -82,7 +82,7 @@
 
                 <div *ngIf="isAllowedQuantity()">
                     <mat-form-field appearance="fill" class="field">
-                        <mat-label>(optional) Item Quantity</mat-label>
+                        <mat-label>Item Quantity</mat-label>
                         <input matInput 
                         numeric 
                         type="number"
