--- a/src/app/coin/transaction-modal/transaction-modal.component.html
+++ b/src/app/coin/transaction-modal/transaction-modal.component.html
@@ -1,7 +1,7 @@
 <mat-dialog-content>
-    <div [ngClass]="{'withdraw-label': type === 'Withdraw', 'deposit-label': type === 'Deposit'}">
+    <div class="bigLobsterText">
         <span class="br"> </span>
-        {{type}}
+        {{type}} Coin
     </div>
     <br>
     <form [formGroup]="transactionFormGroup">
