more style fixes, added message for currency transaction confirmation, updated todo list

--- a/src/app/bag-parent/bag-parent.component.css
+++ b/src/app/bag-parent/bag-parent.component.css
@@ -2,9 +2,9 @@
     background-image: url('../../assets/wallpaper.jpg');
     background-repeat: repeat;
     background-attachment: fixed;
-    height: 100vh;
-    min-height: 1800px;
-    overflow-x: visible;
+    height: fit-content;
+    min-height: calc(100vh + 300px);
+    overflow-y: visible;
 }
 
 .centerDie{
