added item description modal

--- a/src/app/bag-parent/bag-parent.component.html
+++ b/src/app/bag-parent/bag-parent.component.html
@@ -1,32 +1,27 @@
 <div class="bag-background">
-    <div [hidden]="!checkLoading()">
-        <br><br><br><br><br><br><br><br><br><br>
-        <img class="centerDie" src="../../assets/dice-load.gif"/>
-    </div>
-    <div [hidden]="checkLoading()">
-        <br>
-        <img class="title" src="../../assets/title.png"/>
-        <br>
-        <app-user [users]="users" #user></app-user>
-        <br><br>
-        <div class="moneyCard"  *ngIf="userComponent?.selectedUser !== undefined">
-            <app-money [currencyTransaction]="latestTransaction"></app-money>
-            <div class="button-container">
-                <br>
-                <span *ngIf="userComponent?.selectedUser == getDM()">
-                    <button mat-raised-button color="light-blue" (click)="openDepositDialog()">Deposit Coin</button>
-                    &nbsp;&nbsp;&nbsp;
-                </span>
-                <button mat-raised-button color="light-blue" (click)="openWithdrawDialog()">Withdraw Coin</button>
-                &nbsp;&nbsp;&nbsp;
-                <button mat-raised-button color="light-blue" (click)="openMonetaryHistoryDialog()">Transaction History</button>
-            </div>
+    <br>
+    <img class="title" src="../../assets/title.png" />
+    <br>
+    <app-user [users]="users" #user></app-user>
+    <br><br>
+    <div class="moneyCard" *ngIf="userComponent?.selectedUser !== undefined">
+        <app-money [currencyTransaction]="latestTransaction"></app-money>
+        <div class="button-container">
             <br>
+            <span *ngIf="userComponent?.selectedUser == getDM()">
+                <button mat-raised-button color="light-blue" (click)="openDepositDialog()">Deposit Coin</button>
+                &nbsp;&nbsp;&nbsp;
+            </span>
+            <button mat-raised-button color="light-blue" (click)="openWithdrawDialog()">Withdraw Coin</button>
+            &nbsp;&nbsp;&nbsp;
+            <button mat-raised-button color="light-blue" (click)="openMonetaryHistoryDialog()">Transaction
+                History</button>
         </div>
-        <br><br><br>
-        <div *ngIf="userComponent?.selectedUser !== undefined" class="moneyCard">
-            <app-item-container [user]="this.userComponent?.selectedUser"></app-item-container>
-        </div>
+        <br>
+    </div>
+    <br><br><br>
+    <div *ngIf="userComponent?.selectedUser !== undefined" class="moneyCard">
+        <app-item-container [user]="this.userComponent?.selectedUser"></app-item-container>
     </div>
     <br><br><br>
 </div>
