--- a/src/app/item/item-table/item-table.component.css
+++ b/src/app/item/item-table/item-table.component.css
@@ -24,12 +24,12 @@ text-align: center !important;
 }
 
 .mat-column-withdraw { 
-width: 75px !important;
+width: 55px !important;
 text-align: center !important;
 }
 
 .mat-column-delete { 
-width: 75px !important;
+width: 55px !important;
 text-align: center !important;
 }
 
@@ -67,30 +67,15 @@ margin-left: 7px;
     vertical-align: middle
 }
 
-.common {
-    color: rgb(182, 182, 182);
-}
-
-.uncommon {
-    color: rgb(56, 219, 6);
-}
-
-.rare {
-    color: rgb(0, 119, 255);
-}
-
-.very-rare {
-    color: rgb(178, 122, 230);
-}
-
-.legendary {
-    color: orange;
-}
-
-.artifact {
-    color: peru;
-}
-
 .small-button {
     height: 35px;
+    width: 42px!important;
+    min-width: unset!important;
+}
+
+.center-icon {
+    display: flex;
+    margin: auto;
+    justify-content: center;
+    text-align: center;
 }
